src/objects/Expert_Reviewer_Form__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Feeback__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feedback</label>
        <referenceTo>Feedback__c</referenceTo>
        <relationshipName>Expert_Reviewer_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Save_the_date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Save the date</label>
        <referenceTo>Save_the_Date__c</referenceTo>
        <relationshipName>Expert_Reviewer_Form</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <formula>IF(  ISPICKVAL(Save_the_date__r.Status__c  , &apos;Pre-Confirmed&apos;) &amp;&amp;  RecordType.Name = &apos;Vetting Questions&apos;, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Vetting Questions Not Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vetting Questions Submitted</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>test</label>
        <type>Checkbox</type>
    </fields>
    <label>External Reviewer Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Form - {0000}</displayFormat>
        <label>Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Reviewer Forms</pluralLabel>
    <recordTypes>
        <fullName>Setup_Questionnaire</fullName>
        <active>true</active>
        <label>Setup Questionnaire</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vetting_Questions</fullName>
        <active>true</active>
        <label>Vetting Questions</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>